# Shift-Reduce-parser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
driver/: CMakeLists.txt  driver.cpp
examples/: example1.txt  table1.txt  tree.dot
include/: lexer.hpp  parse_tree.hpp  parser.hpp  utils.hpp
source/: CMakeLists.txt  lexer.l  lexer_helper.cpp  main.cpp  parser.cpp  utils.cpp
test/: CMakeLists.txt  unit-test-table.cpp
test/examples/: num1.txt  num2.txt  num3.txt  num4.txt
test/table_test/: CMakeLists.txt  unit-test-table.cpp
test/table_test/expected_tables/: exp_table1.txt  exp_table3.txt
test/table_test/received_tables/: get_table2.txt  get_table4.txt
test/tree_test/: CMakeLists.txt  unit-test-tree.cpp
test/tree_test/expected_tree/: exp_tree1.txt  exp_tree2.txt  exp_tree3.txt  exp_tree4.txt
test/tree_test/received_tree/: get_tree1.txt  get_tree2.txt  get_tree3.txt
